Examples/Engine/engine.h



//
//		GetModel                                    (http://rdf.bg/gkdoc/CP64/GetModel.html)
//				int64_t				owlInstance							IN
//
//				int64_t				returns								OUT
//
//
int64_t		DECL STDC	GetModel(
									int64_t				owlInstance
								);


//
//		SetOverrideFileIO                           (http://rdf.bg/gkdoc/CP64/SetOverrideFileIO.html)
//				int64_t				model								IN
//				int64_t				setting								IN
//				int64_t				mask								IN
//
//				void				returns
//
//	This function overrides the type of file saved / exported independent of the extension given.
//	By default the extension of the file name will define the type saved / exported:
//		.rdf => generated RDF serialized content
//		.ttl => generated TTL serialized content
//		.bin => generated BIN/X serialized content
//
//	Available formats
//		RDF
//		TTL
//		BIN/L - readible but large BIN format
//		BIN/S - Optimized Binary, only running within given revision 
//		BIN/X - Optimized Binary, running in all revisions supporting BIN/X
//
//	Force file type (overrides extension), works only on save (open selects correct type automatically)
//		bit0	bit1	bit2
//		  0		  0		  0		[default] unset forced file type
//		  0		  0		  1		RESERVED
//		  0		  1		  0		TTL
//		  0		  1		  1		RDF
//		  1		  0		  0		BIN/X
//		  1		  0		  1		BIN/S
//		  1		  1		  0		RESERVED
//		  1		  1		  1		BIN/L
//
//	Force exporting as Base64
//		bit4
//		  0		do not use Base64
//		  1		use Base64 (only works for BIN/S and BIN/X), on other formats no effect
//
void		DECL STDC	SetOverrideFileIO(
									int64_t				model,
									int64_t				setting,
									int64_t				mask
								);


//
//		GetOverrideFileIO                           (http://rdf.bg/gkdoc/CP64/GetOverrideFileIO.html)
//				int64_t				model								IN
//				int64_t				mask								IN
//
//				int64_t				returns								OUT
//
//	This function get the current overrides for type of file saved / exported independent of the extension given.
//	By default the extension of the file name will define the type saved / exported:
//		.rdf => generated RDF serialized content
//		.ttl => generated TTL serialized content
//		.bin => generated BIN/X serialized content
//
//	Available formats
//		RDF
//		TTL
//		BIN/L - readible but large BIN format
//		BIN/S - Optimized Binary, only running within given revision 
//		BIN/X - Optimized Binary, running in all revisions supporting BIN/X
//
//	Force file type (overrides extension), works only on save (open selects correct type automatically)
//		bit0	bit1	bit2
//		  0		  0		  0		[default] unset forced file type
//		  0		  0		  1		RESERVED
//		  0		  1		  0		TTL
//		  0		  1		  1		RDF
//		  1		  0		  0		BIN/X
//		  1		  0		  1		BIN/S
//		  1		  1		  0		RESERVED
//		  1		  1		  1		BIN/L
//
//	Force exporting as Base64
//		bit4
//		  0		do not use Base64
//		  1		use Base64 (only works for BIN/S and BIN/X), on other formats no effect
//
int64_t		DECL STDC	GetOverrideFileIO(
									int64_t				model,
									int64_t				mask
								);


//
//		CopyInstanceTree                            (http://rdf.bg/gkdoc/CP64/CopyInstanceTree.html)
//				int64_t				owlInstance							IN
//				int64_t				targetModel							IN
//
//				int64_t				returns								OUT
//
//	This function copies the instance tree towards a new model.
//	In case model is empty a new model will be created (the handle to this new model can be retrieved through
//	the call GetModel() based on the return value of this call).
//	The model can be amy opem model, it can be zero (a new model will be created on-the-fly) and it can be
//	the same model as the model owlInstance is defined within, in this case just a perfect copy of the
//	original instance tree.
//
//	The return value is the handle to the copied owlInstance in the model of choice.
//
int64_t		DECL STDC	CopyInstanceTree(
									int64_t				owlInstance,
									int64_t				targetModel
								);


//
//		CopyInstanceNetwork                         (http://rdf.bg/gkdoc/CP64/CopyInstanceNetwork.html)
//				int64_t				owlInstance							IN
//				bool				includeInverseRelations				IN
//				int64_t				targetModel							IN
//
//				int64_t				returns								OUT
//
//	This function copies the instance network towards a new model.
//	An instance network is different from an instance tree in that it can contain 'loops', the performance
//	from this call will be slower in case the tree / network is sparse.
//	In case model is empty a new model will be created (the handle to this new model can be retrieved through
//	the call GetModel() based on the return value of this call).
//	The model can be amy opem model, it can be zero (a new model will be created on-the-fly) and it can be
//	the same model as the model owlInstance is defined within, in this case just a perfect copy of the
//	original instance tree.
//
//	In case it is known we are talking about a tree (i.e. no internal loops) and inverse relations can be ignored
//	the call CopyInstanceTree is a better choice concerning performance.
//
//	The return value is the handle to the copied owlInstance in the model of choice.
//
int64_t		DECL STDC	CopyInstanceNetwork(
									int64_t				owlInstance,
									bool				includeInverseRelations,
									int64_t				targetModel
								);


//
//		CopyModel                                   (http://rdf.bg/gkdoc/CP64/CopyModel.html)
//				int64_t				sourceModel							IN
//				int64_t				targetModel							IN
//				int64_t				* values							IN / OUT
//				int64_t				card								IN
//
//				int64_t				returns								OUT
//
//	This function copies the complete structure of a model towards another or new model.
//	In case the targetModel is empty a new model will be created.
//	The owlInstance array (values) and it's cardinality (card) can be empty, in case they are
//	non-empty the values are expected to contain owlInstance handles referencing in the source model
//	after a successful copy the values will be adjusted into values referencing the copied owl instances
//	in the new model. the list of values does not have to be complete or even unique and can even be empty.
//
//	sourceModel is not allowed to be empty, targetModel however can be empty or even equal to the source model.
//
//	The return value is the targetModel or in case this value was empty the newly created model.
//
int64_t		DECL STDC	CopyModel(
									int64_t				sourceModel,
									int64_t				targetModel,
									int64_t				* values,
									int64_t				card
								);


//
//		CloseModel                                  (http://rdf.bg/gkdoc/CP64/CloseModel.html)
//				int64_t				model								IN
//
//				int64_t				returns								OUT
//
//	This function closes the model. After this call none of the instances and classes within the model
//	can be used anymore, also garbage collection is not allowed anymore, in default compilation the
//	model itself will be known in the kernel, however known to be disabled. Calls containing the model
//	reference will be protected from crashing when called.
//
int64_t		DECL STDC	CloseModel(
									int64_t				model
								);


//
//  Design Tree Classes API Calls
//

//
//		CreateClass                                 (http://rdf.bg/gkdoc/CP64/CreateClass.html)
//				int64_t				model								IN
//				const char			* name								IN
//
//				int64_t				returns								OUT
//
//	Returns a handle to an on the fly created class.
//	If the model input is zero or not a model handle 0 will be returned,
//
int64_t		DECL STDC	CreateClass(
									int64_t				model,
									const char			* name
								);


//
//		CreateClassW                                (http://rdf.bg/gkdoc/CP64/CreateClassW.html)
//				int64_t				model								IN
//				const wchar_t		* name								IN
//
//				int64_t				returns								OUT
//
//	Returns a handle to an on the fly created class.
//	If the model input is zero or not a model handle 0 will be returned,
//
int64_t		DECL STDC	CreateClassW(
									int64_t				model,
									const wchar_t		* name
								);


//
//		GetClassByName                              (http://rdf.bg/gkdoc/CP64/GetClassByName.html)
//				int64_t				model								IN
//				const char			* name								IN
//
//				int64_t				returns								OUT
//
//	Returns a handle to the class as stored inside.
//	When the class does not exist yet and the name is unique
//	the class will be created on the fly and the handle will be returned.
//	When the name is not unique and given to an instance, objectTypeProperty
//	or dataTypeProperty 0 will be returned.
//
int64_t		DECL STDC	GetClassByName(
									int64_t				model,
									const char			* name
								);


//
//		GetClassByNameW                             (http://rdf.bg/gkdoc/CP64/GetClassByNameW.html)
//				int64_t				model								IN
//				const wchar_t		* name								IN
//
//				int64_t				returns								OUT
//
//	Returns a handle to the class as stored inside.
//	When the class does not exist yet and the name is unique
//	the class will be created on the fly and the handle will be returned.
//	When the name is not unique and given to an instance, objectTypeProperty
//	or dataTypeProperty 0 will be returned.
//
int64_t		DECL STDC	GetClassByNameW(
									int64_t				model,
									const wchar_t		* name
								);


//
//		GetClassesByIterator                        (http://rdf.bg/gkdoc/CP64/GetClassesByIterator.html)
//				int64_t				model								IN
//				int64_t				owlClass							IN
//
//				int64_t				returns								OUT
//
//	Returns a handle to an class.
//	If input class is zero, the handle will point to the first relevant class.
//	If all classes are past (or no relevant classes are found), the function will return 0.
//
int64_t		DECL STDC	GetClassesByIterator(
									int64_t				model,
									int64_t				owlClass
								);


//
//		SetClassParent                              (http://rdf.bg/gkdoc/CP64/SetClassParent.html)
//				int64_t				owlClass							IN
//				int64_t				parentOwlClass						IN
//				int64_t				setting								IN
//
//				void				returns
//
//	Defines (set/unset) the parent class of a given class. Multiple-inheritence is supported and behavior
//	of parent classes is also inherited as well as cardinality restrictions on datatype properties and
//	object properties (relations).
//
void		DECL STDC	SetClassParent(
									int64_t				owlClass,
									int64_t				parentOwlClass,
									int64_t				setting
								);


//
//		SetClassParentEx                            (http://rdf.bg/gkdoc/CP64/SetClassParentEx.html)
//				int64_t				model								IN
//				int64_t				owlClass							IN
//				int64_t				parentOwlClass						IN
//				int64_t				setting								IN
//
//				void				returns
//
//	Defines (set/unset) the parent class of a given class. Multiple-inheritence is supported and behavior
//	of parent classes is also inherited as well as cardinality restrictions on datatype properties and
//	object properties (relations).
//
//	This call has the same behavior as SetClassParent, however needs to be
//	used in case classes are exchanged as a successive series of integers.
//
void		DECL STDC	SetClassParentEx(
									int64_t				model,
									int64_t				owlClass,
									int64_t				parentOwlClass,
									int64_t				setting
								);


//
//		GetClassParentsByIterator                   (http://rdf.bg/gkdoc/CP64/GetClassParentsByIterator.html)
//				int64_t				owlClass							IN
//				int64_t				parentOwlClass						IN
//
//				int64_t				returns								OUT
//
//	Returns the next parent of the class.
//	If input parent is zero, the handle will point to the first relevant parent.
//	If all parent are past (or no relevant parent are found), the function will return 0.
//
int64_t		DECL STDC	GetClassParentsByIterator(
									int64_t				owlClass,
									int64_t				parentOwlClass
								);