IfcEngine.cs


		/// <summary>
		///		SetOverrideFileIO                           (http://rdf.bg/gkdoc/CS64/SetOverrideFileIO.html)
		///
		///	This function overrides the type of file saved / exported independent of the extension given.
		///	By default the extension of the file name will define the type saved / exported:
		///		.rdf => generated RDF serialized content
		///		.ttl => generated TTL serialized content
		///		.bin => generated BIN/X serialized content
		///
		///	Available formats
		///		RDF
		///		TTL
		///		BIN/L - readible but large BIN format
		///		BIN/S - Optimized Binary, only running within given revision 
		///		BIN/X - Optimized Binary, running in all revisions supporting BIN/X
		///
		///	Force file type (overrides extension), works only on save (open selects correct type automatically)
		///		bit0	bit1	bit2
		///		  0		  0		  0		[default] unset forced file type
		///		  0		  0		  1		RESERVED
		///		  0		  1		  0		TTL
		///		  0		  1		  1		RDF
		///		  1		  0		  0		BIN/X
		///		  1		  0		  1		BIN/S
		///		  1		  1		  0		RESERVED
		///		  1		  1		  1		BIN/L
		///
		///	Force exporting as Base64
		///		bit4
		///		  0		do not use Base64
		///		  1		use Base64 (only works for BIN/S and BIN/X), on other formats no effect
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "SetOverrideFileIO")]
		public static extern void SetOverrideFileIO(Int64 model, Int64 setting, Int64 mask);

		/// <summary>
		///		GetOverrideFileIO                           (http://rdf.bg/gkdoc/CS64/GetOverrideFileIO.html)
		///
		///	This function get the current overrides for type of file saved / exported independent of the extension given.
		///	By default the extension of the file name will define the type saved / exported:
		///		.rdf => generated RDF serialized content
		///		.ttl => generated TTL serialized content
		///		.bin => generated BIN/X serialized content
		///
		///	Available formats
		///		RDF
		///		TTL
		///		BIN/L - readible but large BIN format
		///		BIN/S - Optimized Binary, only running within given revision 
		///		BIN/X - Optimized Binary, running in all revisions supporting BIN/X
		///
		///	Force file type (overrides extension), works only on save (open selects correct type automatically)
		///		bit0	bit1	bit2
		///		  0		  0		  0		[default] unset forced file type
		///		  0		  0		  1		RESERVED
		///		  0		  1		  0		TTL
		///		  0		  1		  1		RDF
		///		  1		  0		  0		BIN/X
		///		  1		  0		  1		BIN/S
		///		  1		  1		  0		RESERVED
		///		  1		  1		  1		BIN/L
		///
		///	Force exporting as Base64
		///		bit4
		///		  0		do not use Base64
		///		  1		use Base64 (only works for BIN/S and BIN/X), on other formats no effect
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "GetOverrideFileIO")]
		public static extern Int64 GetOverrideFileIO(Int64 model, Int64 mask);

		/// <summary>
		///		CopyInstanceTree                            (http://rdf.bg/gkdoc/CS64/CopyInstanceTree.html)
		///
		///	This function copies the instance tree towards a new model.
		///	In case model is empty a new model will be created (the handle to this new model can be retrieved through
		///	the call GetModel() based on the return value of this call).
		///	The model can be amy opem model, it can be zero (a new model will be created on-the-fly) and it can be
		///	the same model as the model owlInstance is defined within, in this case just a perfect copy of the
		///	original instance tree.
		///
		///	The return value is the handle to the copied owlInstance in the model of choice.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "CopyInstanceTree")]
		public static extern Int64 CopyInstanceTree(Int64 owlInstance, Int64 targetModel);

		/// <summary>
		///		CopyInstanceNetwork                         (http://rdf.bg/gkdoc/CS64/CopyInstanceNetwork.html)
		///
		///	This function copies the instance network towards a new model.
		///	An instance network is different from an instance tree in that it can contain 'loops', the performance
		///	from this call will be slower in case the tree / network is sparse.
		///	In case model is empty a new model will be created (the handle to this new model can be retrieved through
		///	the call GetModel() based on the return value of this call).
		///	The model can be amy opem model, it can be zero (a new model will be created on-the-fly) and it can be
		///	the same model as the model owlInstance is defined within, in this case just a perfect copy of the
		///	original instance tree.
		///
		///	In case it is known we are talking about a tree (i.e. no internal loops) and inverse relations can be ignored
		///	the call CopyInstanceTree is a better choice concerning performance.
		///
		///	The return value is the handle to the copied owlInstance in the model of choice.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "CopyInstanceNetwork")]
		public static extern Int64 CopyInstanceNetwork(Int64 owlInstance, byte includeInverseRelations, Int64 targetModel);

		/// <summary>
		///		CopyModel                                   (http://rdf.bg/gkdoc/CS64/CopyModel.html)
		///
		///	This function copies the complete structure of a model towards another or new model.
		///	In case the targetModel is empty a new model will be created.
		///	The owlInstance array (values) and it's cardinality (card) can be empty, in case they are
		///	non-empty the values are expected to contain owlInstance handles referencing in the source model
		///	after a successful copy the values will be adjusted into values referencing the copied owl instances
		///	in the new model. the list of values does not have to be complete or even unique and can even be empty.
		///
		///	sourceModel is not allowed to be empty, targetModel however can be empty or even equal to the source model.
		///
		///	The return value is the targetModel or in case this value was empty the newly created model.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "CopyModel")]
		public static extern Int64 CopyModel(Int64 sourceModel, Int64 targetModel, out Int64 values, Int64 card);

		/// <summary>
		///		CloseModel                                  (http://rdf.bg/gkdoc/CS64/CloseModel.html)
		///
		///	This function closes the model. After this call none of the instances and classes within the model
		///	can be used anymore, also garbage collection is not allowed anymore, in default compilation the
		///	model itself will be known in the kernel, however known to be disabled. Calls containing the model
		///	reference will be protected from crashing when called.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "CloseModel")]
		public static extern Int64 CloseModel(Int64 model);

        //
        //  Design Tree Classes API Calls
        //

		/// <summary>
		///		CreateClass                                 (http://rdf.bg/gkdoc/CS64/CreateClass.html)
		///
		///	Returns a handle to an on the fly created class.
		///	If the model input is zero or not a model handle 0 will be returned,
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "CreateClass")]
		public static extern Int64 CreateClass(Int64 model, string name);

		[DllImport(IFCEngineDLL, EntryPoint = "CreateClass")]
		public static extern Int64 CreateClass(Int64 model, byte[] name);

		/// <summary>
		///		CreateClassW                                (http://rdf.bg/gkdoc/CS64/CreateClassW.html)
		///
		///	Returns a handle to an on the fly created class.
		///	If the model input is zero or not a model handle 0 will be returned,
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "CreateClassW")]
		public static extern Int64 CreateClassW(Int64 model, string name);

		[DllImport(IFCEngineDLL, EntryPoint = "CreateClassW")]
		public static extern Int64 CreateClassW(Int64 model, byte[] name);

		/// <summary>
		///		GetClassByName                              (http://rdf.bg/gkdoc/CS64/GetClassByName.html)
		///
		///	Returns a handle to the class as stored inside.
		///	When the class does not exist yet and the name is unique
		///	the class will be created on the fly and the handle will be returned.
		///	When the name is not unique and given to an instance, objectTypeProperty
		///	or dataTypeProperty 0 will be returned.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "GetClassByName")]
		public static extern Int64 GetClassByName(Int64 model, string name);

		[DllImport(IFCEngineDLL, EntryPoint = "GetClassByName")]
		public static extern Int64 GetClassByName(Int64 model, byte[] name);

		/// <summary>
		///		GetClassByNameW                             (http://rdf.bg/gkdoc/CS64/GetClassByNameW.html)
		///
		///	Returns a handle to the class as stored inside.
		///	When the class does not exist yet and the name is unique
		///	the class will be created on the fly and the handle will be returned.
		///	When the name is not unique and given to an instance, objectTypeProperty
		///	or dataTypeProperty 0 will be returned.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "GetClassByNameW")]
		public static extern Int64 GetClassByNameW(Int64 model, string name);

		[DllImport(IFCEngineDLL, EntryPoint = "GetClassByNameW")]
		public static extern Int64 GetClassByNameW(Int64 model, byte[] name);

		/// <summary>
		///		GetClassesByIterator                        (http://rdf.bg/gkdoc/CS64/GetClassesByIterator.html)
		///
		///	Returns a handle to an class.
		///	If input class is zero, the handle will point to the first relevant class.
		///	If all classes are past (or no relevant classes are found), the function will return 0.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "GetClassesByIterator")]
		public static extern Int64 GetClassesByIterator(Int64 model, Int64 owlClass);

		/// <summary>
		///		SetClassParent                              (http://rdf.bg/gkdoc/CS64/SetClassParent.html)
		///
		///	Defines (set/unset) the parent class of a given class. Multiple-inheritence is supported and behavior
		///	of parent classes is also inherited as well as cardinality restrictions on datatype properties and
		///	object properties (relations).
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "SetClassParent")]
		public static extern void SetClassParent(Int64 owlClass, Int64 parentOwlClass, Int64 setting);

		/// <summary>
		///		SetClassParentEx                            (http://rdf.bg/gkdoc/CS64/SetClassParentEx.html)
		///
		///	Defines (set/unset) the parent class of a given class. Multiple-inheritence is supported and behavior
		///	of parent classes is also inherited as well as cardinality restrictions on datatype properties and
		///	object properties (relations).
		///
		///	This call has the same behavior as SetClassParent, however needs to be
		///	used in case classes are exchanged as a successive series of integers.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "SetClassParentEx")]
		public static extern void SetClassParentEx(Int64 model, Int64 owlClass, Int64 parentOwlClass, Int64 setting);

		/// <summary>
		///		GetClassParentsByIterator                   (http://rdf.bg/gkdoc/CS64/GetClassParentsByIterator.html)
		///
		///	Returns the next parent of the class.
		///	If input parent is zero, the handle will point to the first relevant parent.
		///	If all parent are past (or no relevant parent are found), the function will return 0.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "GetClassParentsByIterator")]
		public static extern Int64 GetClassParentsByIterator(Int64 owlClass, Int64 parentOwlClass);
